# linkedin-data-viz

./: .gitignore  CLAUDE.md  README.md  app.py  bookmarklet.js  bookmarklet_install.html  data_loader.py  pyproject.toml  requirements.txt  shortlist_viewer.py
assets/: style.css
utils/: linkedin-profile-extractor.js
