[project]
name = "linkedin-dashboard"
version = "1.0.0"
description = "Interactive dashboard for LinkedIn data visualization"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dash>=2.14.2",
    "dash-bootstrap-components>=1.5.0",
    "dash-table>=5.0.0",
    "dash-ag-grid>=31.0.0",
    "plotly>=5.19.0",
    "pandas>=2.1.4",
    "python-dateutil>=2.8.2",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]